[package]
name = "gesk-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
enum-display-derive = "0.1.1"
inquire = "0.6.2"
chrono = "0.4.26"
serialport = "4.2.2"
tokio = { version = "1.31.0", features = ["rt-multi-thread"] }
rumqttc = "0.22.0"
serde = { version = "1.0.183", features = ["serde_derive"] }
serde_json = { version = "1.0.104", features = ["raw_value"] }
rand = "0.8.5"
regex = "1.9.3"
anyhow = "1.0.75"


[profile.release]
strip = true
lto = true
codegen-units = 1
